--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     	<h1>SAMPLE CSV FILE DISPLAYER</h1>
     	Select CSV file to upload:
     	<input type="file" name="fileToUpload" id="fileToUpload">
-    	<input type="submit" value="Upload CSV" name="submit">
+    	<input type="submit" value="Upload. CSV" name="submit">
     </center>
 </form>
 
